--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "fs": "^0.0.1-security",
+    "ioredis": "^5.6.1",
     "mongoose": "^8.14.1",
     "path": "^0.12.7"
   },
